fix tables not scrolling horizontally on overflow

--- a/modules/ArticleComponents/Article.module.scss
+++ b/modules/ArticleComponents/Article.module.scss
@@ -4,7 +4,7 @@
     overflow-x: auto;
   }
 
-  .redLink > a {
+  :global(a.redLink) {
     color: #ef5353;
   }
 
